<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:text="Nova tarefa"
        android:textAlignment="center"
        style="@style/TextAppearance.AppCompat.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nova_tarefa_titulo"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/bs_aluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nova_tarefa_aluno"/>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/bs_disciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nova_tarefa_disciplina"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_pontuacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_input_pontuacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nova_tarefa_pontuacao"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nova_tarefa_cancelar"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nova_tarefa_salvar"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>